<resources>
    <string name="app_name">E-Ligtas</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="ontheway">X is on the way</string>
    <string name="trackId">Tracking id: xxx</string>
    <string name="UserName">Name</string>
    <string name="Age">0 Y</string>
    <string name="Gender">Gender</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Location">Location</string>
    <string name="birth">-Select Date of Birth-</string>
    <string name="action_sign_in_short">Register</string>
    <string name="action_save_profile">Save</string>
    <string name="action_sendreset">Send email</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="relationship">Relationship</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_Edit">Edit Profile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_rePassword">Retype Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_mobilenumber">Mobile Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not yet registered? Get started now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hello">Hello, %s!</string>
    <string name="full_name">%s %s</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send Message</string>
    <string name="action_back">Back</string>
    <string name="update_fname">First Name: %s</string>
    <string name="update_lname">Last Name: %s</string>
    <string name="update_name">Name: %s, %s</string>
    <string name="update_age">Age: %s</string>
    <string name="update_relationship">Relationship: %s</string>
    <string name="update_gender">Gender: %s</string>
    <string name="update_number">Mobile Number: %s</string>
    <string name="update_email">E-mail: %s</string>
    <string name="sentBy">From: %s</string>
    <string name="subject">Subject: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="title_activity_maps">Map</string>


    <string name="no_scanner">Fingerprint Scanner not detected in Device</string>
    <string name="no_permission">Permission not granted to use Fingerprint Scanner</string>
    <string name="add_lock">Add Lock to your Phone in Settings</string>
    <string name="one_fingerprint">You should add atleast 1 Fingerprint to use this Feature</string>
    <string name="place_finger">Place your Finger on Scanner to Access the App.</string>

    <string-array name="relationship">
        <item>Family</item>
        <item>Friend</item>
    </string-array>
    <string-array name="type">
        <item>Emergency</item>
        <item>Theft</item>
        <item>Property Damage</item>
        <item>Robbery</item>
        <item>Threat</item>
        <item>Physical Injury</item>
        <item>Shooting</item>
        <item>Land Dispute</item>
        <item>Rental Dispute</item>
        <item>Homicide</item>
        <item>Cybercrime</item>
    </string-array>
</resources>
